@@ -1,3 +1,8 @@
+2006-02-18  Derek Atkins  <derek@ihtfp.com>
+
+	* intl-scm/xgettext.scm: remove the absolute path from filenames
+	* intl-scm/Makefile.am: pass the absolute path to xgettext.scm
+
 2006-02-17  David Hampton  <hampton@employees.org>
 
 	* src/register/register-gnome/gnucash-sheet.c:
